dev photography page

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -4,3 +4,34 @@
   object-fit: contain;
   object-position: center;
 }
+
+@mixin title-big {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 36px;
+}
+
+@mixin subtitle-normal {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+}
+@mixin header-big {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 59px;
+}
+
+@mixin header-small {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
